--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />    
     <title>Building House</title>
+    <link rel="icon" href="./ataevBahodir.png" type="image/png">
   </head>
   <body>
     <div id="root"></div>
